force-app/main/default/objects/ampi__xx_Risk_Cause__c/ampi__xx_Risk_Cause__c.object-meta.xml
<CustomObject>
    <description>Capture and track potential causes for the impending risks and actual causes for the risk incidents.</description>
    <label>Risk Cause</label>
    <nameField>
        <label>Risk Cause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>