force-app/main/default/objects/ampi__xx_Risk_Cause__c/fields/ampi__xx_Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship used to relate a Risk Cause with a Risk.</description>
    <label>Risk</label>
    <referenceTo>ampi__Risk__c</referenceTo>
    <relationshipLabel>Risk Causes</relationshipLabel>
    <relationshipName>Risk_Causes</relationshipName>
    <type>Lookup</type>
</CustomField>