force-app/main/default/objects/ampi__xx_Risk_Cause__c/fields/ampi__xx_Risk_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Cause_Category__c</fullName>
    <description>Picklist field that specifies the category of a Risk Cause.</description>
    <inlineHelpText>Internal risks arise within an organization during the normal operation of the organization. External risks arise from events that are external to an organization.</inlineHelpText>
    <label>Risk Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>