force-app/main/default/objects/ampi__xx_Risk_Cause__c/fields/ampi__xx_Risk_Cause_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Cause_Subcategory__c</fullName>
    <description>Picklist field that specifies the sub-category of a Risk Cause.</description>
    <label>Risk Cause Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Situation</fullName>
            </value>
            <value>
                <fullName>Humataranian Crises</fullName>
            </value>
            <value>
                <fullName>Change in Government Policy</fullName>
            </value>
            <value>
                <fullName>New Discovery</fullName>
            </value>
            <value>
                <fullName>Organization Strategy</fullName>
            </value>
            <value>
                <fullName>Programme Management Capacities</fullName>
            </value>
            <value>
                <fullName>Human Resource Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>